--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_API_URL=https://api.meteo-app.com
 NEXT_PUBLIC_API_MOCKING=true
+NEXT_PUBLIC_API_FORECAST=https://api.open-meteo.com/v1
+NEXT_PUBLIC_API_ARCHIVE=https://archive-api.open-meteo.com/v1
