--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
     "axios": "^1.4.0",
-    "react-error-boundary": "^4.0.10",
-    "react-hook-form": "^7.45.1",
+    "chakra-multiselect": "^0.4.5",
+    "framer-motion": "^10.12.18",
     "next": "13.4.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.10",
+    "react-hook-form": "^7.45.1",
+    "recharts": "^2.7.2"
   },
   "devDependencies": {
-    "typescript": "5.1.6",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8"
+    "eslint-config-next": "13.4.8",
+    "typescript": "5.1.6"
   }
 }
